More fixes on mobile menu

--- a/src/Kreta/Bundle/WebBundle/Resources/public/scss/layout/_main-menu.scss
+++ b/src/Kreta/Bundle/WebBundle/Resources/public/scss/layout/_main-menu.scss
@@ -5,7 +5,6 @@
 //
 // For the full copyright and license information, please view the LICENSE
 // file that was distributed with this source code.
-
 @import '../base/colors';
 @import '../base/media';
 
@@ -16,7 +15,6 @@
   display: flex;
   flex: 1 1 100%;
   height: 80px;
-  padding: 0 0 5px 0;
   text-align: center;
   width: 100%;
 }
@@ -31,19 +29,19 @@
   height: 70px;
   fill: $white;
   width: 70px;
-} 
+}
+
 .main-menu__actions {
   align-items: center;
   display: flex;
   flex: 1;
-  justify-content: center;
 }
- 
+
 .main-menu__action {
   cursor: pointer;
   fill: $white;
   height: 30px;
-  margin: 25px 0;
+  margin: 25px 20%;
   width: 30px;
 }
 
@@ -62,13 +60,15 @@
 
 .main-menu__username {
   color: $white;
-  display: block;
+  display: none;
   font-size: 10px;
   margin: 10px 0;
 }
 
-.main-menu__notification {
+.main-menu__notification,
+.main-menu__profile {
   position: relative;
+  margin: 0 10px;
 }
 
 .main-menu__notification-bubble {
@@ -79,7 +79,7 @@
   height: 20px;
   left: 50%;
   line-height: 20px;
-  margin-left: -10px;
+  margin-left: -4px;
   position: absolute;
   top: 15px;
   width: 20px;
@@ -91,10 +91,32 @@
     flex-direction: column;
     height: 100%;
     max-width: 80px;
+    padding: 0 0 5px 0;
   }
-  
+
+  .main-menu__action {
+    margin: 25px 0;
+  }
+
+  .main-menu__actions {
+    justify-content: center;
+  }
+
   .main-menu__actions,
   .main-menu__user {
     flex-direction: column;
+  }
+
+  .main-menu__notification,
+  .main-menu__profile {
+    margin: inherit;
+  }
+
+  .main-menu__notification-bubble {
+    margin-left: -10px;
+  }
+
+  .main-menu__username {
+    display: block;
   }
 }
